Poor version of deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,11 @@ tqdm
 requests
 numpy
 scikit-learn==1.4.2
+torch==2.2.1
+torchaudio
+fastapi
+uvicorn
+python-multipart
+python-dotenv
+aiogram
+httpx
